@startuml

title Diagrama de Classes - refatoração da camada modelo

package ifpr.paranavai.jogo.modelo <<Frame>> {
    class Asteroide
    class ElementoGrafico
    class Inimigo
    class Fase
    class Personagem
    class Tiro
    note "Itálico indica que\no método é abstrato" as N1
}

package java.awt.event <<Frame>> {
    interface ActionListener
    interface KeyListener
}


package javax.swing <<Frame>> {
  class JPanel
}

class Asteroide{
    +Asteroide()
    +Asteroide(int xAleatorio, int yAleatorio)
}

abstract class ElementoGrafico <<abstract>> {
    -int posicaoEmX
    -int posicaoEmY
    -Image imagem
    -int larguraImagem
    -int alturaImagem 
    -boolean ehVisivel
    __
    +{abstract} void carregar()
    +{abstract} void atualizar()
    +Rectangle getRectangle()
    .. getters e setters ..
}

class Fase {
    __
    +Fase()
    .. getters e setters ..
}

abstract class FaseVisao <<abstract>>{
    #Image fundo
    #Timer timer
    #booelan emJogo
    +Fase()
    +{abstract}inicializaElementosGraficosAdicionais()
    +{abstract} void inicializaInimigos()    
    +{abstract} void verificarColisoes()
    +{abstract} void paint(Graphics g)
    +{abstract} void keyTyped(KeyEvent e)
    +{abstract} void keyPressed(KeyEvent e)
    +{abstract} void keyReleased(KeyEvent e)
    +{abstract} void actionPerformed(ActionEvent e)
}

class Personagem{
    -int deslocamentoEmX
    -int deslocamentoEmY
    __
    +Personagem()
    +Personagem(int posicaoEmX, int posicaoEmY)
    .. getters e setters ..
}

class Inimigo{
    +Inimigo()
    +Inimigo(int xAleatorio, int yAleatorio)
}

class Tiro {
    +Tiro()
    +Tiro(int posicaoPersonagemEmX, int posicaoPersonagemEmY)
}

class FaseUm {    
    
}

class JPanel{
    +{abstract} void paint(Graphics g)
}
interface ActionListener <<interface>> {
    +{abstract} void actionPerformed(ActionEvent e)
}

interface KeyListener <<interface>> {
    +{abstract} void keyTyped(KeyEvent e)
    +{abstract} void keyPressed(KeyEvent e)
    +{abstract} void keyReleased(KeyEvent e)
}

Fase "1" *-left-> "1" Personagem
Inimigo "*" <-down- "1" Fase
Asteroide "*" <-down- "1" Fase

Personagem "1" *--> "*" Tiro
Personagem -up-|> ElementoGrafico: extends

Tiro -up-|> ElementoGrafico: extends

Inimigo -up-|> ElementoGrafico: extends

Asteroide -up-|> ElementoGrafico: extends

FaseVisao -up-|> JPanel: extends
FaseVisao -up.|> ActionListener: implements
FaseVisao -up.|> KeyListener: implements
FaseVisaoUm -left-|> FaseVisao: extends
FaseVisaoDois -left-|> FaseVisao: extends

@enduml